<resources>
    <string name="app_name">Top Task</string>
    <string name="app_icon" />
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_change_password_fragment">ChangePasswordFragment</string>

    <string name="comments">"Comments"</string>
    <string name="my_Services">"My Services"</string>
    <string name="edit">"Edit"</string>
    <string name="rate">"Rate"</string>
    <string name="hired_services">"Hired Services"</string>
    <string name="add_new_service">"Add New Service"</string>

    <string name="change_username">"Change Username"</string>
    <string name="change_email">"Change E-mail"</string>
    <string name="change_contact">"Change Contact"</string>
    <string name="change_password">"Change Password"</string>
    <string name="delete_account">"Delete Account"</string>
    <string name="recover_password">Recover Password</string>
    <string name="confirm">Confirm</string>
    <string name="register">Register</string>
    <string name="hire">Hire</string>
    <string name="view_comments">View Comments</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">E-mail</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="my_profile_picture" />
    <string name="rate_opinion_hint">"Give your opinion to help other users"</string>
    <string name="rate_this_service">Please rate this service</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_confirm_new_password">Confirm New Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="login">Login</string>
    <string name="log_out">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="credits">Credits</string>
    <string name="google_icon" />
    <string name="category_1">Carpentry</string>
    <string name="category_2">Mechanics</string>
    <string name="category_3">Technology</string>
    <string name="category_4">Cooking</string>
    <string name="category_5">Child Care</string>
    <string name="category_6">Pet Care</string>
    <string name="category_7">Event Planning</string>
    <string name="category_8"><![CDATA[Health & Beauty]]></string>
    <string name="category_9">Other</string>
    <string name="category_service">Select a category:</string>
    <string name="write_description">Write a detailed description of your service</string>
    <string name="add_pictures">Add some pictures of your work</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="pricing">Pricing</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="service_picture">Service Picture</string>
    <string name="type_password">To change your email, insert the new email and your password to prove your authenticity</string>
    <string name="todo">TODO</string>
    <string name="confirm_e_mail">Confirm E-mail</string>
    <string name="service_title_hint">Title your service</string>
    <string name="to_delete_your_account_verify_your_authenticity">To delete your account verify your authenticity</string>

    <string name="icon_credits">Icons by</string>
    <string name="credits_site"><a href="https://www.flaticon.com">Sourced from flaticon:</a></string>
    <string name="credits1"><a href="https://www.flaticon.com/authors/eucalyp">Eucalyp</a></string>
    <string name="credits2"><a href="https://www.flaticon.com/authors/freepik">Freepik</a></string>
    <string name="credits3"><a href="https://www.flaticon.com/authors/monkik">monkik</a></string>
    <string name="credits4"><a href="https://www.flaticon.com/authors/iconixar">iconixar</a></string>
    <string name="credits5"><a href="https://www.flaticon.com/authors/pixelmeetup">Pixelmeetup</a></string>
    <string name="credits6"><a href="https://www.flaticon.com/authors/pixel-perfect">Pixel perfect</a></string>
    <string name="credits7"><a href="https://www.flaticon.com/authors/smashicons">Smashicons</a></string>

</resources>
